--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <span class="font-bold text-xl text-gray-800">化學實驗室 2.0</span>
                 </div>
                 <div class="hidden md:flex space-x-8 text-gray-600 font-medium">
-                    <a href="#" class="hover:text-blue-600">核心課程</a>
+                    <a href="./curriculum.html" class="hover:text-blue-600">核心課程</a>
                     <a href="#" class="hover:text-blue-600">互動週期表</a>
                     <a href="#" class="hover:text-blue-600">虛擬實驗室</a>
                     <a href="#" class="hover:text-blue-600">備考專區</a>
