--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <h3 class="text-xl font-bold mb-4">核心課程</h3>
                 <p class="text-gray-600 mb-6">從基礎化學到選修化學，系統化整理所有觀念與筆記。</p>
-                <button href="./curriculum.html" class="text-blue-600 font-bold hover:underline">進入學習 -></button>
+                <button class="text-blue-600 font-bold hover:underline" href="./curriculum.html">進入學習 -></button>
             </div>
 
             <div class="bg-white p-8 rounded-2xl shadow-md card-hover text-center">
