--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                     <span class="font-bold text-xl text-gray-800">化學實驗室 2.0</span>
                 </div>
                 <div class="hidden md:flex space-x-8 text-gray-600 font-medium">
-                    <a href="./curriculum.html" class="hover:text-blue-600">核心課程</a>
-                    <a href="#" class="hover:text-blue-600">互動週期表</a>
-                    <a href="#" class="hover:text-blue-600">虛擬實驗室</a>
-                    <a href="#" class="hover:text-blue-600">備考專區</a>
+                    <a href="curriculum.html" class="hover:text-blue-600 transition">核心課程</a>
+                    <a href="#" class="hover:text-blue-600 transition">互動週期表</a>
+                    <a href="#" class="hover:text-blue-600 transition">虛擬實驗室</a>
+                    <a href="#" class="hover:text-blue-600 transition">備考專區</a>
                 </div>
             </div>
         </div>
@@ -40,7 +40,7 @@
             <h1 class="text-4xl md:text-6xl font-extrabold mb-6">從原子出發，理解萬物。</h1>
             <p class="text-xl mb-8 opacity-90">專為台灣高中生設計的化學學習平台，符合 108 課綱探究與實作精神。</p>
             <div class="flex justify-center space-x-4">
-                <a href="#explore" class="bg-yellow-400 text-blue-900 px-8 py-3 rounded-full font-bold hover:bg-yellow-300 transition">開始探索</a>
+                <a href="curriculum.html" class="bg-yellow-400 text-blue-900 px-8 py-3 rounded-full font-bold hover:bg-yellow-300 transition shadow-lg">開始探索</a>
                 <a href="#" class="border border-white px-8 py-3 rounded-full font-bold hover:bg-white hover:text-blue-900 transition">加入班級</a>
             </div>
         </div>
@@ -48,13 +48,13 @@
 
     <section id="explore" class="max-w-6xl mx-auto py-16 px-4">
         <div class="grid md:grid-cols-3 gap-8">
-            <div class="bg-white p-8 rounded-2xl shadow-md card-hover text-center">
+            <div class="bg-white p-8 rounded-2xl shadow-md card-hover text-center border-t-4 border-blue-500">
                 <div class="bg-blue-100 w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-6">
                     <i class="fas fa-book-open text-blue-600 text-2xl"></i>
                 </div>
                 <h3 class="text-xl font-bold mb-4">核心課程</h3>
                 <p class="text-gray-600 mb-6">從基礎化學到選修化學，系統化整理所有觀念與筆記。</p>
-                <button class="text-blue-600 font-bold hover:underline" href="./curriculum.html">進入學習 -></button>
+                <a href="curriculum.html" class="inline-block bg-blue-600 text-white px-6 py-2 rounded-lg font-bold hover:bg-blue-700 transition">進入學習</a>
             </div>
 
             <div class="bg-white p-8 rounded-2xl shadow-md card-hover text-center">
@@ -63,7 +63,7 @@
                 </div>
                 <h3 class="text-xl font-bold mb-4">虛擬實驗室</h3>
                 <p class="text-gray-600 mb-6">沒辦法進實驗室？這裡有精美的 3D 模擬與影片紀錄。</p>
-                <button class="text-green-600 font-bold hover:underline">開始操作 -></button>
+                <button class="text-green-600 font-bold hover:underline cursor-not-allowed">即將開放 -></button>
             </div>
 
             <div class="bg-white p-8 rounded-2xl shadow-md card-hover text-center">
@@ -72,7 +72,7 @@
                 </div>
                 <h3 class="text-xl font-bold mb-4">備考專區</h3>
                 <p class="text-gray-600 mb-6">學測、分科測驗歷屆試題精解，精準掌握大考趨勢。</p>
-                <button class="text-red-600 font-bold hover:underline">即刻練習 -></button>
+                <button class="text-red-600 font-bold hover:underline cursor-not-allowed">即將開放 -></button>
             </div>
         </div>
     </section>
@@ -88,9 +88,9 @@
                 <div class="p-8 md:w-2/3">
                     <h4 class="text-2xl font-bold mb-4">今日焦點元素</h4>
                     <p class="text-gray-600 leading-relaxed">
-                        矽是地殼中含量第二豐富的元素。在台灣，它是我們「護國神山」半導體產業的基石。你想知道為什麼純度高達 99.9999999% 的矽晶圓是怎麼製造的嗎？
+                        矽是地殼中含量第二豐富的元素。在台灣，它是我們「護國神山」半導體產業的基石。點擊下方按鈕了解矽在電子軌域與共價鍵結的奧秘。
                     </p>
-                    <button class="mt-6 bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 transition">探索更多應用</button>
+                    <button class="mt-6 border-2 border-blue-600 text-blue-600 px-6 py-2 rounded-lg hover:bg-blue-600 hover:text-white transition font-bold">探索更多應用</button>
                 </div>
             </div>
         </div>
@@ -99,7 +99,7 @@
     <footer class="bg-gray-800 text-white py-8 mt-12">
         <div class="text-center">
             <p>© 2026 化學實驗室 2.0 - 讓學習像化學反應一樣精彩</p>
-            <p class="text-gray-400 text-sm mt-2">Designed for High School Chemistry Students</p>
+            <p class="text-gray-400 text-sm mt-2">Designed for High School Chemistry Students in Taiwan</p>
         </div>
     </footer>
 
