--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="hidden md:flex space-x-8 text-gray-600 font-medium">
                     <a href="curriculum.html" class="hover:text-blue-600 transition">核心課程</a>
-                    <a href="#" class="hover:text-blue-600 transition">互動週期表</a>
+                    <a href="elements.html" class="hover:text-blue-600 transition">互動週期表</a>
                     <a href="#" class="hover:text-blue-600 transition">虛擬實驗室</a>
                     <a href="#" class="hover:text-blue-600 transition">備考專區</a>
                 </div>
