--- a/index.html
+++ b/index.html
@@ -3,103 +3,101 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>化學實驗室 2.0 | 探索微觀世界的奧秘</title>
+    <title>化學實驗室 2.0 | 108 課綱全課程導覽</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        .hero-bg {
-            background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%);
-        }
-        .card-hover:hover {
-            transform: translateY(-5px);
-            transition: all 0.3s ease;
-        }
+        .hero-bg { background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%); }
+        .course-card { transition: all 0.3s ease; }
+        .course-card:hover { transform: translateY(-10px); shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1); }
     </style>
 </head>
-<body class="bg-gray-50 font-sans">
+<body class="bg-slate-50 font-sans">
 
-    <nav class="bg-white shadow-lg sticky top-0 z-50">
-        <div class="max-w-6xl mx-auto px-4">
-            <div class="flex justify-between items-center h-16">
-                <div class="flex items-center space-x-2">
-                    <i class="fas fa-flask text-blue-600 text-2xl"></i>
-                    <span class="font-bold text-xl text-gray-800">化學實驗室 2.0</span>
-                </div>
-                <div class="hidden md:flex space-x-8 text-gray-600 font-medium">
-                    <a href="curriculum.html" class="hover:text-blue-600 transition">核心課程</a>
-                    <a href="elements.html" class="hover:text-blue-600 transition">互動週期表</a>
-                    <a href="#" class="hover:text-blue-600 transition">虛擬實驗室</a>
-                    <a href="#" class="hover:text-blue-600 transition">備考專區</a>
-                </div>
+    <nav class="bg-white shadow-lg sticky top-0 z-50 px-6">
+        <div class="max-w-7xl mx-auto flex justify-between items-center h-16">
+            <div class="flex items-center space-x-2">
+                <i class="fas fa-flask text-blue-600 text-2xl"></i>
+                <span class="font-bold text-xl text-gray-800">化學實驗室 2.0</span>
+            </div>
+            <div class="hidden md:flex space-x-8 text-gray-600 font-medium">
+                <a href="curriculum.html" class="hover:text-blue-600 transition">課程地圖</a>
+                <a href="#" class="hover:text-blue-600">虛擬實驗</a>
+                <a href="#" class="hover:text-blue-600">歷屆試題</a>
             </div>
         </div>
     </nav>
 
-    <header class="hero-bg text-white py-20 px-4">
-        <div class="max-w-4xl mx-auto text-center">
-            <h1 class="text-4xl md:text-6xl font-extrabold mb-6">從原子出發，理解萬物。</h1>
-            <p class="text-xl mb-8 opacity-90">專為台灣高中生設計的化學學習平台，符合 108 課綱探究與實作精神。</p>
-            <div class="flex justify-center space-x-4">
-                <a href="curriculum.html" class="bg-yellow-400 text-blue-900 px-8 py-3 rounded-full font-bold hover:bg-yellow-300 transition shadow-lg">開始探索</a>
-                <a href="#" class="border border-white px-8 py-3 rounded-full font-bold hover:bg-white hover:text-blue-900 transition">加入班級</a>
-            </div>
+    <header class="hero-bg text-white py-16 px-4 text-center">
+        <div class="max-w-4xl mx-auto">
+            <h1 class="text-4xl md:text-5xl font-black mb-6">掌握化學脈絡，從這裡開始</h1>
+            <p class="text-lg opacity-90 mb-0">針對 108 課綱精心編排，涵蓋高一基礎化學至高三選修化學全模組。</p>
         </div>
     </header>
 
-    <section id="explore" class="max-w-6xl mx-auto py-16 px-4">
-        <div class="grid md:grid-cols-3 gap-8">
-            <div class="bg-white p-8 rounded-2xl shadow-md card-hover text-center border-t-4 border-blue-500">
-                <div class="bg-blue-100 w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-6">
-                    <i class="fas fa-book-open text-blue-600 text-2xl"></i>
+    <section class="max-w-7xl mx-auto py-16 px-6">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            
+            <div class="bg-white rounded-3xl p-8 border-t-8 border-yellow-400 shadow-sm course-card">
+                <div class="flex justify-between items-start mb-4">
+                    <h3 class="text-2xl font-bold text-slate-800">高一 基礎化學</h3>
+                    <span class="bg-yellow-100 text-yellow-700 text-xs px-2 py-1 rounded font-bold">必修</span>
                 </div>
-                <h3 class="text-xl font-bold mb-4">核心課程</h3>
-                <p class="text-gray-600 mb-6">從基礎化學到選修化學，系統化整理所有觀念與筆記。</p>
-                <a href="curriculum.html" class="inline-block bg-blue-600 text-white px-6 py-2 rounded-lg font-bold hover:bg-blue-700 transition">進入學習</a>
+                <p class="text-slate-500 text-sm mb-6 leading-relaxed">物質組成、構造與反應、溶液反應及生活應用。學測考科重點範圍。</p>
+                <a href="curriculum.html#basic" class="block text-center bg-yellow-400 hover:bg-yellow-500 text-yellow-900 font-bold py-3 rounded-xl transition">進入課程</a>
             </div>
 
-            <div class="bg-white p-8 rounded-2xl shadow-md card-hover text-center">
-                <div class="bg-green-100 w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-6">
-                    <i class="fas fa-vial text-green-600 text-2xl"></i>
+            <div class="bg-white rounded-3xl p-8 border-t-8 border-orange-500 shadow-sm course-card">
+                <div class="flex justify-between items-start mb-4">
+                    <h3 class="text-2xl font-bold text-slate-800">選修化學 I</h3>
+                    <span class="bg-orange-100 text-orange-700 text-xs px-2 py-1 rounded font-bold">高二上</span>
                 </div>
-                <h3 class="text-xl font-bold mb-4">虛擬實驗室</h3>
-                <p class="text-gray-600 mb-6">沒辦法進實驗室？這裡有精美的 3D 模擬與影片紀錄。</p>
-                <button class="text-green-600 font-bold hover:underline cursor-not-allowed">即將開放 -></button>
+                <p class="text-slate-500 text-sm mb-6 leading-relaxed">物質與能量：深入探討氣體定律、溶液性質與反應熱計算。</p>
+                <a href="curriculum.html#elective1" class="block text-center bg-orange-500 hover:bg-orange-600 text-white font-bold py-3 rounded-xl transition">進入課程</a>
             </div>
 
-            <div class="bg-white p-8 rounded-2xl shadow-md card-hover text-center">
-                <div class="bg-red-100 w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-6">
-                    <i class="fas fa-edit text-red-600 text-2xl"></i>
+            <div class="bg-white rounded-3xl p-8 border-t-8 border-cyan-500 shadow-sm course-card">
+                <div class="flex justify-between items-start mb-4">
+                    <h3 class="text-2xl font-bold text-slate-800">選修化學 II</h3>
+                    <span class="bg-cyan-100 text-cyan-700 text-xs px-2 py-1 rounded font-bold">高二下</span>
                 </div>
-                <h3 class="text-xl font-bold mb-4">備考專區</h3>
-                <p class="text-gray-600 mb-6">學測、分科測驗歷屆試題精解，精準掌握大考趨勢。</p>
-                <button class="text-red-600 font-bold hover:underline cursor-not-allowed">即將開放 -></button>
+                <p class="text-slate-500 text-sm mb-6 leading-relaxed">物質構造與反應速率：原子結構、化學鍵結與碰撞學說。</p>
+                <a href="curriculum.html#elective2" class="block text-center bg-cyan-500 hover:bg-cyan-600 text-white font-bold py-3 rounded-xl transition">進入課程</a>
             </div>
+
+            <div class="bg-white rounded-3xl p-8 border-t-8 border-blue-500 shadow-sm course-card">
+                <div class="flex justify-between items-start mb-4">
+                    <h3 class="text-2xl font-bold text-slate-800">選修化學 III</h3>
+                    <span class="bg-blue-100 text-blue-700 text-xs px-2 py-1 rounded font-bold">高三上</span>
+                </div>
+                <p class="text-slate-500 text-sm mb-6 leading-relaxed">化學反應與平衡一：化學平衡、沈澱反應與水溶液酸鹼。</p>
+                <a href="curriculum.html#elective3" class="block text-center bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 rounded-xl transition">進入課程</a>
+            </div>
+
+            <div class="bg-white rounded-3xl p-8 border-t-8 border-emerald-500 shadow-sm course-card">
+                <div class="flex justify-between items-start mb-4">
+                    <h3 class="text-2xl font-bold text-slate-800">選修化學 IV</h3>
+                    <span class="bg-emerald-100 text-emerald-700 text-xs px-2 py-1 rounded font-bold">高三上/下</span>
+                </div>
+                <p class="text-slate-500 text-sm mb-6 leading-relaxed">化學反應與平衡二：氧化還原、電化學與金屬元素。</p>
+                <a href="curriculum.html#elective4" class="block text-center bg-emerald-500 hover:bg-emerald-600 text-white font-bold py-3 rounded-xl transition">進入課程</a>
+            </div>
+
+            <div class="bg-white rounded-3xl p-8 border-t-8 border-purple-600 shadow-sm course-card">
+                <div class="flex justify-between items-start mb-4">
+                    <h3 class="text-2xl font-bold text-slate-800">選修化學 V</h3>
+                    <span class="bg-purple-100 text-purple-700 text-xs px-2 py-1 rounded font-bold">高三下</span>
+                </div>
+                <p class="text-slate-500 text-sm mb-6 leading-relaxed">有機化學與應用科技：有機化合物、聚合物與先進材料。</p>
+                <a href="curriculum.html#elective5" class="block text-center bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 rounded-xl transition">進入課程</a>
+            </div>
+
         </div>
     </section>
 
-    <section class="bg-gray-100 py-12">
-        <div class="max-w-4xl mx-auto px-4">
-            <div class="bg-white rounded-3xl shadow-xl overflow-hidden flex flex-col md:flex-row">
-                <div class="bg-blue-600 text-white p-12 flex flex-col justify-center items-center md:w-1/3">
-                    <span class="text-6xl font-bold">Si</span>
-                    <span class="text-xl mt-2">矽 (Silicon)</span>
-                    <span class="text-sm opacity-75">Atomic No. 14</span>
-                </div>
-                <div class="p-8 md:w-2/3">
-                    <h4 class="text-2xl font-bold mb-4">今日焦點元素</h4>
-                    <p class="text-gray-600 leading-relaxed">
-                        矽是地殼中含量第二豐富的元素。在台灣，它是我們「護國神山」半導體產業的基石。點擊下方按鈕了解矽在電子軌域與共價鍵結的奧秘。
-                    </p>
-                    <button class="mt-6 border-2 border-blue-600 text-blue-600 px-6 py-2 rounded-lg hover:bg-blue-600 hover:text-white transition font-bold">探索更多應用</button>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <footer class="bg-gray-800 text-white py-8 mt-12">
-        <div class="text-center">
-            <p>© 2026 化學實驗室 2.0 - 讓學習像化學反應一樣精彩</p>
-            <p class="text-gray-400 text-sm mt-2">Designed for High School Chemistry Students in Taiwan</p>
+    <footer class="bg-slate-900 text-white py-12">
+        <div class="max-w-7xl mx-auto px-6 text-center">
+            <p class="opacity-60 text-sm font-light">Chemistry Lab 2.0 | 致力於連結化學知識與生活實踐</p>
         </div>
     </footer>
 
