--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             </div>
             <div class="hidden md:flex space-x-8 text-gray-600 font-medium">
                 <a href="curriculum.html" class="hover:text-blue-600 transition">課程地圖</a>
+                <a href="elements.html" class="hover:text-blue-600">互動元素週期表</a>
                 <a href="#" class="hover:text-blue-600">虛擬實驗</a>
                 <a href="#" class="hover:text-blue-600">歷屆試題</a>
             </div>
